k8s/okd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ollama-chat-route
spec:
  # The host will be automatically generated by OKD if left blank.
  to:
    kind: Service
    name: ollama-chat-frontend-svc
    weight: 100
  port:
    targetPort: 80
  # tls:
  #   termination: edge
  #   insecureEdgeTerminationPolicy: Redirect
